src/test/resources/invalid/semanticErr/extra/otheredges/EqWithUndefinedVars.wacc
begin

int x = 1;
println x == y;
println y == x

end